# elyria-consequence-twin

./: .env.example  .gitignore  A_PLUS_VERIFICATION_GATE.md  BUYER_REVIEW_INDEX.md  CLAIM_BOUNDARY.md  EXTERNAL_VERIFIER_GUIDE.md  FRESH_CLONE_REVIEW_TEST.md  FULL_STACK_SCOPE.md  LIMITATIONS.md  Makefile  PERSISTENT_AUDIT_LEDGER.md  PERSISTENT_RECEIPT_STORE.md  PROPRIETARY_NOTICE.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_V0_8_1_PUBLIC.md  RELEASE_NOTES_V0_8_2_VERIFIED.md  REVIEWER_VERIFICATION.md  SECURITY_POSTURE.md  STATUS.md  THREAT_MODEL.md  pyproject.toml  requirements.txt
commercial/: client_intake_questions.md  one_page_offer.md
docs/: 00_positioning.md  01_methodology.md  05_verdict_model.md  07_ip_boundary.md  10_executive_demo_script.md  11_buyer_one_page.md  12_demo_screenshot_and_proof_safety.md  13_public_product_page_copy.md  14_screenshot_capture_plan.md  README_INDEX.md
examples/: sample_graph.json  sample_results.json
external_verifier/: verify_replay.py
schemas/: assessment.schema.json  policy_pack.schema.json  receipt.schema.json
scripts/: __init__.py  generate_digest_manifest.py  production_preflight.py  verify_digest_manifest.py
templates/: ai_workflow_action_exposure_map.csv  consequence_binding_map.csv  evidence_gap_register.csv  executive_consequence_risk_brief.md  refusal_conditions_matrix.csv
tests/: test_api_runtime.py  test_auth_rbac.py  test_dashboard_static.py  test_evidence_gate_logic.py  test_external_verifier.py  test_production_gate.py  test_route_closure.py  test_signing_adapter.py  (+1 more)
(+20 files in other folders)
