[project]
name = "elyria-consequence-twin"
version = "0.1.0"
description = "A digital twin scaffold for consequence-bearing execution diagnostics."
authors = [{ name = "Samantha Revita-Wagner" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
consequence-twin = "consequence_twin.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
